@startuml

title Class Diagram - US1006b

skinparam class {
    skinparam classAttributeIconSize 0
    skinparam packageStyle rectangle
    skinparam shadowing false
    skinparam linetype polyline
    BackgroundColor #FEF9E7
    ArrowColor Black
}

class "DisplayCandidateDataUI" as UI {}

class "DisplayCandidateApplicationsController" as DisplayCandidateApplicationsController {
    +findApplicationsFromCandidate(Candidate candidate): List<ApplicationDTO>
}

class "DisplayCandidateApplicationsService" as DisplayCandidateApplicationsService {
    +findApplicationsFromCandidate(Candidate candidate): List<ApplicationDTO>
}

class "Application" as Application {
    -applicationDate: ApplicationDate
    -applicationNumber: ApplicationNumber
    -result: Result
    -jobOpening: JobOpening
    +toDTO(): ApplicationDTO
}

class "ApplicationDTO" as ApplicationDTO {
    -jobOpening: JobOpening
}

class "ApplicationRepository" as ApplicationRepository {
    +findApplicationsFromCandidate(Candidate candidate): List<Application>
}

class "JpaApplicationRepository" as JpaApplicationRepository {
    +findApplicationsFromCandidate(Candidate candidate): List<Application>
}

class "Database" as DB <<(D, #8BEBFF)>> {
}

class "Result" as Result {
    -outcome: Outcome
    -justification: Justification
}

UI --> DisplayCandidateApplicationsController
DisplayCandidateApplicationsController --> DisplayCandidateApplicationsService
DisplayCandidateApplicationsService --> ApplicationRepository
DisplayCandidateApplicationsService --> Application
ApplicationRepository --> JpaApplicationRepository
JpaApplicationRepository --> DB
Application --> ApplicationDTO
Application --> Result

@enduml